tests/NormalTests/paczka1/small_fuzzy/61866762.err
Error in line 4: WfZ A362 31,6
Error in line 7: WfZ A77 57,9
Error in line 5: kDZ A275 84,0
